--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:theme="@style/Theme.NewSocialGift"
         tools:targetApi="31">
         <activity
+            android:name=".EditProfile"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity
             android:name=".Register"
             android:exported="false" />
         <activity
