--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'io.socket:socket.io-client:1.0.0'
+    implementation ('io.socket:socket.io-client:2.1.0') {
+        exclude group: 'org.json', module: 'json'
+    }
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
 
